rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-e394867519c72238.d
/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-e394867519c72238.rmeta: only-arrow.rs

/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-e394867519c72238.d: only-arrow.rs

only-arrow.rs:
